# WATT_WATCHER

./: .gitignore  CHANGELOG.md  README.md  conftest.py  pyproject.toml  requirements.txt
.cloud/: main.tf  outputs.tf  providers.tf  sync_github_secrets.sh  terraform.tfvars.example  variables.tf
.github/workflows/: deploy.yml
_bmad-output/implementation-artifacts/: 1-1-sql-migrations.md  1-2-expose-consommation-mw.md  2-1-jwt-middleware.md  2-2-register-email-confirmation.md  2-3-login-logout.md  2-4-reset-password.md  2-5-delete-account.md  4-1-subscriptions-api.md  5-1-email-service.md  5-2-alert-detector.md  5-3-alert-timer-function.md  6-1-rgpd-inactivity-cleanup.md  6-2-test-injection-script.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics-user-accounts-alerts.md  prd-user-accounts-alerts.md
frontend/: package-lock.json  package.json  vite.config.js
functions/: AzuriteConfig  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  __azurite_db_table__.json  function_app.py  requirements.txt
tests/: test_alert_detector.py  test_alert_dispatcher.py  test_alert_engine.py  test_api_endpoints.py  test_auth.py  test_delete_account.py  test_email_service.py  test_era5_ingestion.py  test_gold_loader.py  test_inject_test_data.py  test_jwt_middleware.py  test_login_logout.py  test_migrations.py  test_openapi.py  test_quality_gates.py  test_register_confirmation.py  test_reset_password.py  test_rgpd_service.py  test_subscriptions.py  test_transformations.py
(+65 files in other folders)
